# umbrella

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile.in  README.md
.github/workflows/: pip-build.yml  wheels.yml
bindings/python/: CMakeLists.txt  config-default.toml  pyproject.toml  setup.py.in
bindings/python/src/: abstract.cpp  abstract.h  attributes.h  iterators.h  pyUmbrella.h  umbrella.cpp
bindings/python/src/objc/: enums.cpp  init.cpp  init.h  pyObjC.h
bindings/python/src/objc/objects/: pyABI.cpp  pyCategory.cpp  pyClass.cpp  pyIVar.cpp  pyMethod.cpp  pyProperty.cpp  pyProtocol.cpp  pyTypeEncoding.cpp
bindings/python/umbrellacxx/: __init__.py  __init__.pyi  objc.pyi
cmake/: gitConfig.cmake
docs/: doxygen_index.md
include/umbrella/: iterators.h  objc.h  runtime.h  umbrella.h  version.h  version.h.in  visibility.h
include/umbrella/objc/: ABI.h  Category.h  Class.h  IVar.h  Method.h  Property.h  Protocol.h  TypeEncoding.def  TypeEncoding.h  Types.h
src/: MachOStream.cpp  MachOStream.h  runtime.cpp
src/objc/: ABI.cpp  Category.cpp  Class.cpp  Declaration.h  IVar.cpp  Method.cpp  Parsing.h  Property.cpp  Protocol.cpp  TypeEncoding.cpp
